# llmshield

./: .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  llmshield_demo.py  make.bat  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yml  doc-coverage.yml  documentation.yaml  pylint.yml  ruff.yml  tests.yml
docs/source/: conf.py  index.rst  llmshield.matchers.dicts.rst  llmshield.matchers.rst  llmshield.rst  modules.rst
llmshield/: __init__.py  cloak_prompt.py  core.py  detection_utils.py  entity_detector.py  error_handling.py  exceptions.py  lru_cache.py  requirements.txt  uncloak_response.py  uncloak_stream_response.py  utils.py
llmshield/cache/: __init__.py  entity_cache.py
llmshield/cache/loader/: __init__.py  loader.py
llmshield/matchers/: __init__.py  functions.py  lists.py  regex.py
llmshield/matchers/dicts/: __init__.py  cities.txt  organisations.txt
llmshield/matchers/dicts/corpus/: README.md  english.txt
llmshield/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  default_provider.py  google_provider.py  openai_provider.py  provider_factory.py  xai_provider.py
scripts/: analyse_chunks.py  test_pypi_upload_with_token.sh
tests/: __init__.py  helpers.py  test_allowlist.py  test_anthropic_provider.py  test_anthropic_response.py  test_anthropic_tool_results.py  test_cohere_provider.py  test_conversation_hash_objects.py  test_core.py  test_core_tool_calls.py  test_default_provider.py  test_detection_utils.py  test_edge_cases.py  test_entity_cache.py  test_entity_detector.py  test_entity_detector_missing_lines.py  test_entity_processing_edge_cases.py  test_error_handling.py  test_google_provider.py  test_lru_cache.py  test_multiple_languages.py  test_openai_provider.py  test_package_installation.py  test_protocol_and_interfaces.py  test_provider_factory.py  test_regex.py  test_selective_pii.py  test_streaming.py  test_threading_and_concurrency.py  test_tool_call_cloaking.py  test_tool_call_integration.py  test_tool_calls.py  test_uncloak.py  test_uncloak_response.py  test_uncloak_stream_missing.py  test_uncloak_tool_calls.py  test_utils.py  test_utils_comprehensive.py  test_xai_provider.py  time_wrapper.py
tests/providers/: __init__.py  test_openai.py  test_providers.py
