[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmshield"
version = "0.0.6"
description = "Shields your confidential data from third party LLM providers"
readme = "README.md"
authors = [{ name = "Aditya Dedhia", email = "adityadedhia@hey.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
license = { file = "LICENSE.txt" }
keywords = ["llm", "ai", "security", "privacy"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/brainpolo/llmshield"
Issues = "https://github.com/brainpolo/llmshield/issues"

[tool.setuptools]
packages = [
    "llmshield",
    "llmshield.matchers",
]

[tool.setuptools.package-data]
"llmshield.matchers" = ["dicts/*.txt"]

[tool.setuptools.exclude-package-data]
"*" = [
    "*.pyc", "*.pyo", "*.pyd", "__pycache__",
    "tests/*",
    ".github/*",
    ".coverage",
    "htmlcov/*",
    ".pytest_cache/*",
    ".mypy_cache/*",
    "build/*", "dist/*", "*.egg-info",
    "Makefile"
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.0.0",
    "pylint>=3.3.6",
    "coverage>=7.8.0",
    "build>=1.2.2",
    "packaging>=24.2",
    "pyproject_hooks>=1.2.0",
    "setuptools>=75.8.0",
    "pdoc>=15.0.3"
]
