[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmshield"
version = "2.1.0"
description = "Shields your confidential data from third-party LLM providers."
readme = "README.md"
authors = [
    {name = "Aditya Dedhia", email = "aditya@brainpolo.com"},
    { name = "Sebastian Andres El Khoury Seoane", email = "sebasandres0694@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license-files = ["LICENSE.txt"]
keywords = ["llm", "ai", "security", "privacy"]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/brainpolo/llmshield"
Issues = "https://github.com/brainpolo/llmshield/issues"

[tool.setuptools]
packages = [
    "llmshield",
    "llmshield.cache",
    "llmshield.matchers",
    "llmshield.matchers.dicts",
    "llmshield.matchers.dicts.corpus",
    "llmshield.providers",
]

[tool.setuptools.package-data]
"llmshield.matchers" = ["dicts/*.txt", "dicts/corpus/*.txt"]

[tool.setuptools.exclude-package-data]
"*" = [
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "__pycache__",
    "tests/*",
    ".github/*",
    ".coverage",
    "htmlcov/*",
    ".pytest_cache/*",
    ".mypy_cache/*",
    "build/*",
    "dist/*",
    "*.egg-info",
    "Makefile",
]

[tool.ruff]
line-length = 79  # Pep-8 limit

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "PL", # pylint rules
    "D",  # pydocstyle rules
]
ignore = [
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
]

exclude = [
    ".venv/*",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "double"
line-ending = "auto"

[dependency-groups]
dev = [
    "coverage",        # Test coverage measurement and reporting
    "build",           # PEP 517 compliant package building
    "packaging",       # Core utilities for Python packages
    "pyproject-hooks", # Build backend hook implementations
    "setuptools",      # Package building and distribution tools
    "sphinx",          # Documentation generation system
    "myst-parser",     # Markdown support for Sphinx docs
    "sphinx-rtd-theme", # Read the Docs theme for Sphinx
    "pre-commit",      # Git pre-commit hooks framework
    "ruff",            # Fast Python linter and formatter
    "parameterized",   # Parameterized test case generation
    "openai",          # For testing with OpenAI-compatible providers
    "anthropic",       # For testing with Anthropic provider
    "google-genai",    # For testing with Google GenAI provider
    "xai-sdk",         # For testing with xAI provider
    "cohere",          # For testing with Cohere provider
    "twine",           # Package uploading to PyPI
]
